# ProtoTools

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  Info.plist.in  ProtoDebug.entitlements
app/qml/: main.qml
app/qml/MainWindow/: MainWindow.qml
app/qml/Panes/: Console.qml  Dashboard.qml  ScriptEditor.qml  Setup.qml  ToolPanel.qml
app/qml/Panes/SetupPanes/Drivers/: BLE.qml  CAN.qml  Stub.qml  UART.qml  USB.qml
app/qml/Widgets/: MenuBar.qml  QMLCodeEditor.qml  QuickCmd.qml  ResponseFrameBox.qml  StatusBar.qml  TitleBar.qml
app/rcc/: KPtools.rc  ProtoTools.rc
app/rcc/icons/: ProtoDebug.icns
app/src/: main.cpp
app/src/DataModel/: DataMonitorModel.cpp  DataMonitorModel.h  FirmwareUpgradeManager.cpp  FirmwareUpgradeManager.h  ProtocolEngine.cpp  ProtocolEngine.h  QuickCommandManager.cpp  QuickCommandManager.h  SettingsManager.cpp  SettingsManager.h
app/src/IO/: ConnectionManager.cpp  ConnectionManager.h  DeviceManager.cpp  DeviceManager.h  FrameProcessor.cpp  FrameProcessor.h  HAL_Driver.h
app/src/IO/Drivers/: BluetoothLE.cpp  BluetoothLE.h  UART.cpp  UART.h  UsbBulk.cpp  UsbBulk.h  ZlgCanFd.cpp  ZlgCanFd.h
app/src/Misc/: CommonFonts.cpp  CommonFonts.h  ModuleManager.cpp  ModuleManager.h  ThemeManager.cpp  ThemeManager.h  TimerEvents.cpp  TimerEvents.h  Translator.cpp  Translator.h
app/src/Platform/: macos_helpers.h  macos_helpers.mm
app/src/Script/: LuaCodeEditor.cpp  LuaCodeEditor.h  LuaEngine.cpp  LuaEngine.h  LuaTextArea.cpp  LuaTextArea.h  QMLLuaHighlighter.cpp  QMLLuaHighlighter.h
app/src/Terminal/: Terminal.cpp  Terminal.h  TerminalWidget.cpp  TerminalWidget.h
app/tests/: test_toggle_comment.cpp  test_toggle_comment2.cpp
app/tools/: zlg_can_bridge.py
config/: script.lua
lib/QCodeEditor/: CMakeLists.txt  README.md
lib/QCodeEditor/resources/: dark_style.xml  qcodeeditor_resources.qrc
scripts/: package-windows-single-exe.ps1
